# advoc2016

./: README.md  advoc2016.cabal  stack.yaml
src/Day1/: Main.hs
src/Day10/: Main.hs
src/Day11/: Main.hs
src/Day12/: Main.hs
src/Day13/: Main.hs
src/Day14/: Main.hs
src/Day15/: Main.hs
src/Day16/: Main.hs
src/Day17/: Main.hs
src/Day18/: Main.hs
src/Day19/: Day19Pt1.c  Main.hs
src/Day2/: Main.hs
src/Day20/: Main.hs
src/Day21/: Main.hs
src/Day3/: Main.hs
src/Day4/: Main.hs
src/Day5/: Main.hs
src/Day6/: Main.hs
src/Day7/: Main.hs
src/Day8/: Main.hs
src/Day9/: Main.hs
