name:                advoc2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/advoc2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable advoc2016-day1
  hs-source-dirs:      src/Day1
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  build-depends:       base
                     , split
                     , transformers
                     , containers
  default-language:    Haskell2010

executable advoc2016-day2
  hs-source-dirs:      src/Day2
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  build-depends:       base
                     , split
                     , array
  default-language:    Haskell2010

executable advoc2016-day3
  hs-source-dirs:      src/Day3
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  build-depends:       base
  default-language:    Haskell2010

executable advoc2016-day4
  hs-source-dirs:      src/Day4
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  build-depends:       base
                     , parsec
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/advoc2016
