name:                advoc2016
version:             0.1.0.0
synopsis:            Advent of Code 2016 solutions
description:         Please see README.md
homepage:            https://github.com/TRManderson/advoc2016#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2016 Tom Manderson
category:            Puzzle, Christmas
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable advoc2016-day1
  hs-source-dirs:      src/Day1
  main-is:             Main.hs
  ghc-options:         -threaded -Wunsafe -rtsopts -with-rtsopts=-N4
  build-depends:       base
                     , split
                     , transformers
                     , containers
  default-language:    Haskell2010

executable advoc2016-day2
  hs-source-dirs:      src/Day2
  main-is:             Main.hs
  ghc-options:         -threaded -Wunsafe -rtsopts -with-rtsopts=-N4
  build-depends:       base
                     , split
                     , array
  default-language:    Haskell2010

executable advoc2016-day3
  hs-source-dirs:      src/Day3
  main-is:             Main.hs
  ghc-options:         -threaded -Wunsafe -rtsopts -with-rtsopts=-N4
  build-depends:       base
  default-language:    Haskell2010

executable advoc2016-day4
  hs-source-dirs:      src/Day4
  main-is:             Main.hs
  ghc-options:         -threaded -Wunsafe -rtsopts -with-rtsopts=-N4
  build-depends:       base
  default-language:    Haskell2010

executable advoc2016-day5
  hs-source-dirs:      src/Day5
  main-is:             Main.hs
  ghc-options:         -threaded -Wunsafe -rtsopts -with-rtsopts=-N4
  build-depends:       base
                     , cryptohash
                     , bytestring
                     , parallel
                     , base16-bytestring
                     , array
  default-language:    Haskell2010

executable advoc2016-day6
  hs-source-dirs:      src/Day6
  main-is:             Main.hs
  ghc-options:         -threaded -Wunsafe -rtsopts -with-rtsopts=-N4
  build-depends:       base
  default-language:    Haskell2010

executable advoc2016-day7
  hs-source-dirs:      src/Day7
  main-is:             Main.hs
  ghc-options:         -threaded -Wunsafe -rtsopts -with-rtsopts=-N4
  build-depends:       base
                     , split
  default-language:    Haskell2010

executable advoc2016-day8
  hs-source-dirs:      src/Day8
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N4
  build-depends:       base
                     , attoparsec
                     , text
                     , array
  default-language:    Haskell2010

executable advoc2016-day9
  hs-source-dirs:      src/Day9
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N4
  build-depends:       base
  default-language:    Haskell2010

executable advoc2016-day12
  hs-source-dirs:      src/Day12
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N1
  build-depends:       base
                     , attoparsec
                     , text
                     , transformers
                     , array
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TRManderson/advoc2016
